# devc-research-py-nvim

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
scripts/: alt-start.sh  devnvim.sh
src/: app.py
