[tool.poetry]
name = "py-nvim-sandbox"
version = "0.1.0"
description = "Sandbox for Neovim-in-container with Poetry & Pyright"
authors = ["John <john@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
black = "^24.0"
ruff = "^0.6.0"
pytest = "^8.0"


[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "basic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"